--- a/help_app/android/app/src/main/AndroidManifest.xml
+++ b/help_app/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
          to allow setting breakpoints, to provide hot reload, etc.
     -->
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
 
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
@@ -16,6 +19,9 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="help_app"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAnvhrkUgLm6csZiu9ojjdw2ucOOGONP3I"/>
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
