--- a/help_app/pubspec.yaml
+++ b/help_app/pubspec.yaml
@@ -17,6 +17,13 @@ dependencies:
     sdk: flutter
   shared_preferences: ^0.5.1+1
   global_configuration: 0.1.2
+  google_maps_flutter: ^0.2.0+3
+  geolocator: ^3.0.0
+  permission_handler: ^2.2.0
+  http: ^0.12.0+1
+
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
