--- a/help_app/android/app/src/main/AndroidManifest.xml
+++ b/help_app/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="help_app"
         android:icon="@mipmap/ic_launcher">
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAnvhrkUgLm6csZiu9ojjdw2ucOOGONP3I"/>
 
