--- a/help_app/pubspec.yaml
+++ b/help_app/pubspec.yaml
@@ -18,9 +18,11 @@ dependencies:
   shared_preferences: ^0.5.1+1
   global_configuration: 0.1.2
   google_maps_flutter: ^0.2.0+3
-  geolocator: ^3.0.0
-  permission_handler: ^2.2.0
+  geolocator: ^3.0.1
+  permission_handler: 3.0.0
   http: ^0.12.0+1
+  geocoder: ^0.1.2
+
 
 
 
